[gd_scene load_steps=12 format=3 uid="uid://kwrnejk1aa4x"]

[ext_resource type="LabelSettings" uid="uid://djgahar21djg1" path="res://new_label_settings.tres" id="1_bfylm"]
[ext_resource type="Script" path="res://hud.gd" id="1_qvyry"]
[ext_resource type="LabelSettings" uid="uid://pgsjyeokbmon" path="res://label_settings_small.tres" id="2_vbx06"]
[ext_resource type="Texture2D" uid="uid://cwfwasqjvgcxt" path="res://assets/ui/return.png" id="4_4eeqi"]
[ext_resource type="Texture2D" uid="uid://ciotvfg8xyl75" path="res://assets/ui/icons8-return-64.png" id="4_uvsih"]
[ext_resource type="FontFile" uid="uid://bbprd2hersu7x" path="res://assets/fonts/Nunito-Regular.ttf" id="6_aersp"]
[ext_resource type="PackedScene" uid="uid://dx82p7iq8xpkt" path="res://base_button.tscn" id="7_xgcyb"]
[ext_resource type="Texture2D" uid="uid://cvbich4p4biek" path="res://assets/ui/complete.png" id="8_a4adp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7vhk"]
bg_color = Color(0.72549, 0.72549, 0.72549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hpvm"]
bg_color = Color(0.647059, 0.647059, 0.647059, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_auetv"]
font = ExtResource("6_aersp")
font_size = 50

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qvyry")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 983.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e7vhk")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 140

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty:"
label_settings = ExtResource("1_bfylm")

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"
label_settings = ExtResource("2_vbx06")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Timer:"
label_settings = ExtResource("1_bfylm")

[node name="TimerLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = ExtResource("2_vbx06")
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Exposure" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Exposure:"
label_settings = ExtResource("1_bfylm")

[node name="ExposureButton" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4" instance=ExtResource("7_xgcyb")]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Returnbutton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
icon = ExtResource("4_uvsih")
expand_icon = true

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
icon = ExtResource("4_4eeqi")
expand_icon = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.533333)

[node name="PanelContainer" type="PanelContainer" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -36.0
offset_right = 143.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5hpvm")

[node name="MarginContainer" type="MarginContainer" parent="GameOverScreen/ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/ColorRect/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!!!"
label_settings = SubResource("LabelSettings_auetv")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="RetryButton" parent="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_xgcyb")]
layout_mode = 2

[node name="HomeButton" parent="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_xgcyb")]
layout_mode = 2
text = "HOME"

[node name="GameCompletedScreen" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="GameCompletedScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.533333)

[node name="VBoxContainer" type="VBoxContainer" parent="GameCompletedScreen/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = 100.0
offset_right = 205.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Complete" type="Sprite2D" parent="GameCompletedScreen/ColorRect/VBoxContainer"]
position = Vector2(241, 365)
scale = Vector2(0.75, 0.75)
texture = ExtResource("8_a4adp")
offset = Vector2(-30, -700)

[node name="PanelContainer" type="PanelContainer" parent="GameCompletedScreen/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5hpvm")

[node name="MarginContainer" type="MarginContainer" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "SUCESS!!!"
label_settings = SubResource("LabelSettings_auetv")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NextButton" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_xgcyb")]
layout_mode = 2
text = "NEXT"

[node name="HomeButton" parent="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_xgcyb")]
layout_mode = 2
text = "HOME"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4/ExposureButton" to="." method="_on_exposure_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/Returnbutton" to="." method="_on_returnbutton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverScreen/ColorRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="GameCompletedScreen/ColorRect/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
